--- a/DevOpsDashboard.Web/Views/Home/Index.cshtml
+++ b/DevOpsDashboard.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 
-<div class="row" id="lists">
+<div class="row" id="lists" style="padding-top: 50px;">
     <div class="col-md-8"><div id="list"></div></div>
     <div class="col-md-4"><div id="blist"></div></div>
 </div>
@@ -32,14 +32,14 @@
                     var json = jsonString;
                 }
                 var str = JSON.stringify(json, null, 2);
-              
+              //  alert(str);
                 switch (json.Category) {
 
                     case "Release":
                     case "Build":
                         var m = json.Message;
                         var t = json.Title;
-                        var cls = "";
+                        var cls = "alert-info";
                         var s = json.Status;
                         switch (s)
                         {
@@ -53,8 +53,15 @@
                                 cls = "alert-danger";
                                 break;
                         }
-
-                        $("#blist").append('<div class="alert '+cls+'"><strong>' + t+"</strong><p>" +m+ "</p></div>");
+                        var inner = "";
+                        if (json.Details.length > 0) {
+                            var details = "";
+                            for (i = 0; i < json.Details.length; i++) {
+                                details += "<li>" + json.Details[i] + "</li>";
+                            }
+                            inner = "<ul>" + details + "</ul>";
+                        }
+                        $("#blist").append('<div class="alert '+cls+'"><strong>' + t+"</strong><p>" +m+ "</p>"+inner+"</div>");
                         while ($("#blist").children().length > 20) {
                             $('#blist div:eq(0)').remove();
                         }
@@ -62,10 +69,34 @@
 
                     default:
                         var m = json.Message;
-                         $("#list").append("<p>" + m + "</p>");
+                        var t = json.Title;
+                        var cls = "panel-default";
+                        var s = json.Status;
+                        switch (s) {
+                            case "succeeded":
+                            case "success":
+                                cls = "panel-success";
+                                break;
+
+                            case "failed":
+                            case "rejected":
+                                cls = "panel-danger";
+                                break;
+                        }
+                        var inner = "";
+                        if (json.Details.length > 0) {
+                            var details = "";
+                            for (i = 0; i < json.Details.length; i++) {
+                                details += "<li>" + json.Details[i] + "</li>";
+                            }
+                            inner = "<ul>" + details + "</ul>";
+                        }
+                        
+                        $("#list").append('<div class="panel ' + cls + '"><div class="panel-body">' + m +inner+ "</div></div>");
                         while ($("#list").children().length > 20) {
                             $('#list div:eq(0)').remove();
                         }
+                        break;
 
                 }
             };
@@ -74,6 +105,23 @@
 
             });
         });
+        /*
 
+
+        {
+  "Title": "string",
+  "Message": "Somebody did something strange",
+  "Category": "string",
+  "Context": "string",
+  "SourceData": "string",
+  "Timestamp": "2017-07-23T20:40:45.080Z",
+  "Details": [
+    "A stragne thing #1",
+"Another strage thing"
+  ],
+  "Status": "string"
+}
+
+        */
     </script>
 }
